--- a/app/css/ruler.css
+++ b/app/css/ruler.css
@@ -12,56 +12,80 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
+    pointer-events: none;
 }
 
 .rul_ruler{
     display: block;
     position: absolute;
-    border: 1px solid black;
+    border: 1px solid gray;
+    pointer-events: all;
 
+    filter: blur(0);
+    -webkit-filter: blur(0);
 
 }
 
 .rul_corner{
-
-    top:0;
-    left:0;
+    position: absolute;
     background-color: white;
     z-index: 10;
 }
+
+.rul_cornerTL{
+    top:1px;
+    left:1px;
+}
+.rul_cornerTR{
+    top:1px;
+    right:1px;
+}
+.rul_cornerBL{
+    bottom:1px;
+    left:1px;
+}
+.rul_cornerBR{
+    bottom:1px;
+    right:1px;
+}
 .rul_ruler_Vertical{
-    cursor: ns-resize;
+    cursor: ew-resize;
     z-index: 9;
-
-
+    border-left: none;
 }
 
 .rul_ruler_Horizontal{
-    cursor: ew-resize;
+    cursor: ns-resize;
     z-index: 8;
-
+    border-top: none;
 }
 
 .rul_line{
     position: absolute;
-    border: 1px solid gray;
+    border-left: 1px solid lightblue;
+    border-bottom: 1px solid lightblue;
+    pointer-events: all;
+}
+.rul_line :hover{
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
 }
 
 .rul_lineVer{
     top: 0;
     bottom: 0;
-    position: absolute;
-    border: 1px solid gray;
+    width: 2px;
+
 }
 .rul_lineVer:hover{
    cursor: ew-resize;
 }
 
+
 .rul_lineHor{
     right: 0;
     left: 0;
-    position: absolute;
-    border: 1px solid gray;
+    height: 2px;
 }
 
 .rul_lineHor:hover{
